objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>ID externo - Exclusivo</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Senha__c</fullName>
        <label>Senha</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UltimoAcesso__c</fullName>
        <label>Data Ultimo acesso</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnviarEmailDiariamente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar email diariamente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnviarEmailRecuperacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar email recuperação</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UltimoAcesso__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos os contatos</label>
    </listViews>
</CustomObject>